# Nexus

./: README.md  alembic.ini  init_db.py  pyproject.toml  verify_vault.py
mig/: env.py
mig/versions/: 2c225f9e6998_replace_is_done_with_status.py  3698362e1754_phase_1_2_schema.py  a4d6f79644f6_phase_3_notes.py  e7b27688d700_init.py
src/nex/: __main__.py  app.py
src/nex/db/: conn.py
src/nex/db/mod/: __init__.py  secret.py  stat.py  task.py
src/nex/db/repo/: secret.py  task.py
src/nex/svc/: ai.py  comms.py
src/nex/tui/: main_screen.py
src/nex/tui/css/: main.tcss
src/nex/tui/pg/: assistant.py  auth.py  board.py  comms.py  dev.py  edit.py  system.py
