[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nex"
version = "0.1.0"
description = "NEXUS: A Terminal-Based Life Operating System."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Azmeer Pirani", email = "azmeerpirani3@gmail.com"}
]
keywords = ["tui", "productivity", "terminal", "dashboard"]

dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "pandas>=2.1.0",
    "plotext>=5.2.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
nex = "nex.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]